--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "repository": "https://github.com/koajs/examples",
   "bugs": "https://github.com/koajs/examples/issues",
   "dependencies": {
+    "chalk": "^2.4.1",
     "ejs": "^2.5.6",
     "fs-promise": "^2.0.3",
     "koa": "^2.2.0",
@@ -17,6 +18,8 @@
     "koa-session": "^5.0.0",
     "koa-static": "^3.0.0",
     "koa-views": "^6.0.2",
+    "lodash": "^4.17.11",
+    "mockjs": "^1.0.1-beta3",
     "react": "^16.6.0",
     "streaming-json-stringify": "^3.1.0",
     "swig": "^1.4.2"
