--- a/mock/package.json
+++ b/mock/package.json
@@ -5,17 +5,20 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"cross-env DEBUG=deer npm start",
-    "start": "nodemon --inspect index.js"
+    "dev": "cross-env DEBUG=deer nodemon --inspect index.js",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "debug": "^4.1.0",
     "glob": "^7.1.3",
-    "json-server": "^0.14.0"
+    "json-server": "^0.14.0",
+    "lodash": "^4.17.11",
+    "opn": "^5.4.0"
   },
   "devDependencies": {
-    "cross-env": "^5.2.0"
+    "cross-env": "^5.2.0",
+    "mockjs": "^1.0.1-beta3"
   }
 }
