--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-config-standard": "^6.2.0",
     "eslint-plugin-promise": "^3.3.0",
     "eslint-plugin-standard": "^2.0.1",
+    "koa-proxy": "^1.0.0-alpha.0",
     "mocha": "^5.0.0",
     "should": "^3.3.2",
     "supertest": "^3.0.0"
